--- a/bootstrap.html
+++ b/bootstrap.html
@@ -53,21 +53,52 @@
         <!-- <img class="img-responsive center-block" src="http://www.cybersalt.org/images/funnypictures/cats/catmelonhead.jpg" alt="..."> -->
       
       <div class="col-xs-8 col-xs-offset-2"><img class="img-responsive center-block" src="http://www.cybersalt.org/images/funnypictures/cats/catmelonhead.jpg">
-      <p class="col-xs-8 col-xs-offset-2 text-center">We deliver only the highest quality domestic and exotic melons from local, indpendent farmers from around the world. Our melons are delivered quickly with the greatest care. We guarantee every order, every time.</p>
+      <p class="col-xs-10 col-xs-offset-2 col-md-8  text-center">We deliver only the highest quality domestic and exotic melons from local, indpendent farmers from around the world. Our melons are delivered quickly with the greatest care. We guarantee every order, every time.</p>
       </div>
    </div><br>
 
    <div class="row">
-    <div class="col-xs-4 text-center"><span class="glyphicon glyphicon-star"></span> <strong>Award Winning</strong></div>
-     <div class="col-xs-4 text-center"><span class="glyphicon glyphicon-globe"></span> <strong>Huge Selection</strong></div>
-    <div class="col-xs-4 text-center"><span class="glyphicon glyphicon-eye-open"></span> <strong>Certified Sustainable</strong></div>
+      <div class="col-xs-12 col-md-4 text-center">
+        <span class="glyphicon glyphicon-star"></span> <strong>Award Winning</strong>
+        <div class="text-center">Dont take our word for it. See all the awards our melons have earned.</div>
+      </div>
+    
+
+    <div>
+      <div class="row"><div class="col-xs-4 col-md-4 text-center"><span class="glyphicon glyphicon-globe"></span> <strong>Huge Selection</strong></div></div>
+      <div class="row"><div class="col-xs-4 col-md-4 text-center">We import melons from al over the world, ensuring we have every melon you could possibly desire.</div></div>
+    </div>
+    <div>
+      <div class="row"><div class="col-xs-4 col-md-4 text-center"><span class="glyphicon glyphicon-eye-open"></span> <strong>Certified Sustainable</strong></div></div>
+      <div class="row"> <div class="col-xs-4 col-md-4 text-center">Our melons are sourced only from sustainable, organic local farmers. These are the healtiest melons you'll ever eat.</div></div>
+    </div>
+
+ </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
+   <div class="row">
+    <div class="col-xs-4 col-md-4 text-center"><span class="glyphicon glyphicon-star"></span> <strong>Award Winning</strong></div> 
+     <div class="col-xs-4 col-md-4 text-center"><span class="glyphicon glyphicon-globe"></span> <strong>Huge Selection</strong></div>
+    <div class="col-xs-4 col-md-4 text-center"><span class="glyphicon glyphicon-eye-open"></span> <strong>Certified Sustainable</strong></div>
   </div>
     <div class="row">
-    <div class="col-xs-4 text-center">Dont take our word for it. See all the awards our melons have earned.</div>
-     <div class="col-xs-4 text-center">We import melons from al over the world, ensuring we have every melon you could possibly desire.</div>
-    <div class="col-xs-4 text-center">Our melons are sourced only from sustainable, organic local farmers. These are the healtiest melons you'll ever eat.</div>
-  </div>
-  <div>
+    <div class="col-xs-4 col-md-4 text-center">Dont take our word for it. See all the awards our melons have earned.</div>
+     <div class="col-xs-4 col-md-4 text-center">We import melons from al over the world, ensuring we have every melon you could possibly desire.</div>
+    <div class="col-xs-4 col-md-4 text-center">Our melons are sourced only from sustainable, organic local farmers. These are the healtiest melons you'll ever eat.</div>
+  </div> -->
+  <div class="table-responsive">
     <table class="table table-striped">
       <thead>
         <tr>
@@ -105,23 +136,6 @@
 
 
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!-- You need this in order to use JS-based components in the 
   further study. Leave this at the bottom and code above it. -->
